tests/ui/exhaustive/switch_missing_arg.stderr
× error[LM4116]: argument count mismatch
   ╭─[switch_missing_arg.lm:7:9]
 6 │     switch f {
 7 │         Foo::A(a) => 4_i32,
   ∶         ^^^^^^^^^ expected 2 arguments, but got 1
 8 │     }
   ╰──